# ouroboros

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ko.md  README.md  SECURITY.md  project-context.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dev-publish.yml
agents/: seed-architect.md  socratic-interviewer.md
crates/ouroboros-tui/: Cargo.toml  README.md
crates/ouroboros-tui/src/: db.rs  main.rs  mock.rs  state.rs
crates/ouroboros-tui/src/views/: dashboard.rs  debug.rs  execution.rs  lineage.rs  logs.rs  mod.rs  session_selector.rs
docs/: README.md  architecture.md  cli-reference.md  config-reference.md  getting-started.md  interview-codex-skill-runner-20260312.md  platform-support.md  running-with-claude-code.md  runtime-capability-matrix.md
docs/api/: README.md  agent-runtime-claude-review.md  core.md
docs/contributing/: architecture-overview.md  issue-quality-policy.md  key-patterns.md
docs/guides/: cli-usage.md  common-workflows.md  openclaw-channel-workflow.md  quick-start.md  seed-authoring.md  tui-usage.md
docs/ontological-framework/: HANDOFF.md
docs/runtime-guides/: claude-code.md  codex.md
examples/: dummy_seed.yaml
scripts/: install.sh  mcp-serve.sh  session-start.py
skills/evolve/: SKILL.md
skills/help/: SKILL.md
skills/interview/: SKILL.md
skills/openclaw/: SKILL.md
skills/pm/: SKILL.md
skills/ralph/: SKILL.md
skills/run/: SKILL.md
skills/seed/: SKILL.md
tests/: conftest.py
(+145 files in other folders)
